apportate correzioni alle cards

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                     <p class="email"> marcobianchi&commat;team.com </p>
                 </div>
             </div>
+
+            <div class="column clearfix">
+                <img class="left" src="./img/male1.png" alt="Foto maschio 1">
+                <div class="text-profile">
+                    <h2> MARCO BIANCHI </h2>
+                    <p> Designer </p>
+                    <p class="email"> marcobianchi&commat;team.com </p>
+                </div>
+            </div>
             
 
         </div>
